Find command: require n/ prefix for name search
Name search uses a preamble (plain keywords before any prefix),
inconsistent with all other commands that use n/ for name.

Let's update the find command parser to use n/ for name,
matching the full string after the prefix as a substring,
consistent with how g/ and al/ work.